--- a/src/App.module.css
+++ b/src/App.module.css
@@ -1,4 +1,91 @@
 .menu{
     display: flex;
     width: 100%;
+    position: fixed;
+    align-items: center;
+    justify-content: center;
+    height: 80px;
+    gap: 20px;
+    z-index:  999;
+    background-color: rgb(34, 0, 34);
+     box-shadow: 0px 3px 20px #00000007;
+}
+
+.s1{
+    background-color: aliceblue;
+    color:  rgb(34, 0, 34);
+    height: 100vh;
+    padding-top: 80px;
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: center;
+    gap: 20px;
+}
+
+.left{
+    width: 400px;
+    height: 400px;
+    border-radius: 100%;
+    overflow: hidden;
+    box-shadow: 0px 3px 20px #7700ff;
+}
+
+.imgPerfil{
+    width: 400px;
+    height: 400px;
+    transition: all 200ms ease-in-out;
+}
+.imgPerfil:hover{
+    transform: scale(1.1);
+}
+
+
+.right{
+    width: 500px;    
+}
+
+.title{
+    font-size: 36px;
+    font-weight: bold;
+}
+
+.paragraph{
+    font-size: 22px;
+}
+
+.rodape{
+    width: 100%;
+    display: flex;
+    gap: 20px;
+    align-items: center;
+    justify-content: center;
+    background-color: rgba(75, 24, 122, 0.801);
+    border-top: 2px solid #1f0066c0;
+}
+
+
+.rodape a{
+    transition: all 500ms ease-in-out;
+    overflow: hidden;
+}
+
+.rodape a:hover{
+    transform: translate(-15px) scale(1.3);
+}
+
+@media (width <=768){
+    .s1{
+        padding-top: 20px;
+        gap: 0;
+    }
+    .left{
+        width: 300px;
+        height: 300px;
+    }
+
+    .right{
+        padding: 20px;
+        margin-top: 150;
+    }
 }
