--- a/src/index.css
+++ b/src/index.css
@@ -3,4 +3,25 @@
   margin: 0;
   box-sizing: border-box;
   font-family: Arial, Helvetica, sans-serif;
+  scroll-behavior: smooth;
+}
+
+a{
+  text-decoration: none;
+  color: rgb(255, 240, 240);
+  opacity: 0.7;
+  transition: all 200ms ease-in-out;
+  font-size: 20px;
+}
+
+a:hover{
+  cursor: pointer;
+  opacity: 1;
+  text-decoration: underline;
+
+}
+
+body{
+  background-color: rgba(134, 33, 155, 0.432);
+  color: rgb(255, 255, 255);
 }
