--- a/src/App.module.css
+++ b/src/App.module.css
@@ -74,6 +74,80 @@
     transform: translate(-15px) scale(1.3);
 }
 
+.s5{
+    color: #250b47;
+}
+
+.s5 h3{
+    color: #250b47;
+    font-size: 45px; 
+}
+
+.s4{
+    background-color: #d1aeec;
+    color:#2a0061;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    min-width: 50vh;
+    height: auto;
+    padding: 50px;
+}
+
+.s4 h2{
+    color:  #2a0061;;
+    font-size: 56px;
+    letter-spacing: 10px;
+    font-weight: bold; 
+}
+
+.formData{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 10px;
+    border-radius: 20px;
+    border:2px solid #292450;
+    box-shadow: 0px 3px 20px #00000082;
+    padding: 20px;
+}
+
+.formData label{
+    text-align: left;
+    width: 100%;
+    margin-bottom: -7px;
+}
+
+.formData input{
+    padding: 10px;
+    width: 100%;
+    border-radius: 5px;
+}
+
+.formData textarea{
+    width: 30px;
+    height: 370;
+    border:none ;
+    border: 2px solid #292450;
+    border-radius: 5px;
+    padding: 10px;
+}
+
+.formData button{
+    padding: 10px;
+    border:none ;
+    border: 2px solid #292450;
+    border-radius: 5px;
+    width: 100%;
+    opacity: 0.7;
+}
+
+.formData button:hover{
+    cursor: pointer;
+    opacity: 1;
+}
 @media (width <=768){
     .s1{
         padding-top: 20px;
@@ -88,4 +162,11 @@
         padding: 20px;
         margin-top: 150;
     }
+
+.s4 h2{
+    font-size: 48px;
+    letter-spacing: 5px;
 }
+
+}
+ 
