--- a/src/App.module.css
+++ b/src/App.module.css
@@ -127,8 +127,8 @@
 }
 
 .formData textarea{
-    width: 30px;
-    height: 370;
+    width: 250px;
+    height: 80px;
     border:none ;
     border: 2px solid #292450;
     border-radius: 5px;
@@ -148,6 +148,31 @@
     cursor: pointer;
     opacity: 1;
 }
+
+.s2{
+    display: flex;
+    flex-direction: column;
+    gap: 50px;
+    padding: 50px;
+}
+
+.tecTitle{
+    width: 100%;
+    text-align: center;
+    color:  #2a0061;
+    font-size: 56px;
+    letter-spacing: 10px;
+    font-weight: bold; 
+}
+
+.wrapCards{
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: center;
+    gap: 20px;
+}
+
 @media (width <=768){
     .s1{
         padding-top: 20px;
